<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
    style="@style/textFieldStyle"
    android:textSize="20sp"
     android:text="@string/deviceSetting"
              android:paddingTop="16dp"
              android:paddingRight="16dp"
              android:paddingLeft="16dp"
              android:paddingBottom="16dp"
              android:background="@color/colorPrimaryDark"
              android:textColor="@color/white"
    />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        style="@style/textFieldStyle"
        android:hint="@string/sim_no">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSimNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        style="@style/textFieldStyle"
        android:hint="@string/user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM1234567890"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        style="@style/textFieldStyle"
        android:hint="@string/pass">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM1234567890"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        style="@style/textFieldStyle"
        android:hint="@string/siteUser">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSiteUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        style="@style/textFieldStyle"
        android:hint="@string/sitePass">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSitePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btSave"
        android:layout_width="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        style="@style/buttomtext"
        android:text="@string/save_settings"
        android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>