<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context=".MainActivity">

    <LinearLayout android:layout_width="match_parent"
                  android:background="@color/colorPrimary"
                  android:orientation="horizontal"
                  android:layout_height="@dimen/header">

        <TextView android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  style="@style/titleText"
                  android:layout_weight="1"
                  android:layout_marginLeft="16dp"
                  android:text="@string/app_name"
        />

        <ImageButton
            android:id="@+id/imBtSetting"
            android:background="#00ffffff"
            android:layout_width="@dimen/header"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_settings_applications"
            android:layout_height="@dimen/header"/>

    </LinearLayout>

   <LinearLayout android:layout_width="match_parent"
                android:layout_height="match_parent"
                 android:gravity="bottom"
                 android:orientation="vertical"
   >

       <ScrollView

           android:layout_width="match_parent"
           android:layout_height="430dp"
           android:layout_weight="1">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"

               android:orientation="horizontal"

               >

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:layout_weight="1"
                   android:orientation="vertical">

                   <TextView
                       android:id="@+id/textView"
                       style="@style/titleText"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:gravity="center"
                       android:text="دستورات آنلاین" />

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal">

                       <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:layout_margin="16dp"
                           android:layout_weight="1"
                           android:orientation="vertical">


                           <com.google.android.material.button.MaterialButton
                               android:id="@+id/btGetPath"
                               style="@style/buttomtext"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:text="@string/getPath" />


                       </LinearLayout>

                       <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:layout_margin="16dp"
                           android:layout_weight="1"
                           android:orientation="vertical">

                           <com.google.android.material.button.MaterialButton
                               android:id="@+id/btOnline"
                               style="@style/buttomtext"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:text="@string/onlineStatus" />


                       </LinearLayout>
                   </LinearLayout>

                   <TextView
                       style="@style/titleText"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:gravity="center"
                       android:text="دستورات آفلاین (SMS)" />

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:layout_weight="1"
                       android:orientation="horizontal">

                       <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:layout_margin="16dp"
                           android:layout_weight="1"
                           android:orientation="vertical">


                           <com.google.android.material.button.MaterialButton
                               android:id="@+id/btBattery"
                               style="@style/buttomtext"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:text="@string/getBattery" />

                           <com.google.android.material.button.MaterialButton
                               android:id="@+id/btDeactivePark"
                               style="@style/buttomtext"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:text="@string/disable_park" />

                           <com.google.android.material.button.MaterialButton
                               android:id="@+id/btCall"
                               style="@style/buttomtext"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:text="@string/call_device" />

                           <com.google.android.material.button.MaterialButton
                               android:id="@+id/btswichOff"
                               style="@style/buttomtext"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:text="@string/cpuReset"
                               android:visibility="gone" />

                           <com.google.android.material.button.MaterialButton
                               android:id="@+id/btSetData"
                               style="@style/buttomtext"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:text="@string/setParam"
                               android:visibility="gone" />

                           <com.google.android.material.button.MaterialButton
                               android:id="@+id/btSetOutPut"
                               style="@style/buttomtext"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:text="@string/setDigit"
                               android:visibility="gone" />
                       </LinearLayout>

                       <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:layout_margin="16dp"
                           android:layout_weight="1"
                           android:orientation="vertical">

                           <com.google.android.material.button.MaterialButton
                               android:id="@+id/btGps"
                               style="@style/buttomtext"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:text="@string/getGps" />

                           <com.google.android.material.button.MaterialButton
                               android:id="@+id/btActivePark"
                               style="@style/buttomtext"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:text="@string/active_park" />

                           <com.google.android.material.button.MaterialButton
                               android:id="@+id/btInfo"
                               style="@style/buttomtext"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:text="@string/getDevInfo"
                               android:visibility="gone" />

                           <com.google.android.material.button.MaterialButton
                               android:id="@+id/btStatus"
                               style="@style/buttomtext"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:text="@string/getStatus" />


                           <com.google.android.material.button.MaterialButton
                               android:id="@+id/btDevSetting"
                               style="@style/buttomtext"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:backgroundTint="#FF0000"
                               android:text="@string/dev_settings" />

                           <com.google.android.material.button.MaterialButton
                               android:id="@+id/btSetting"
                               style="@style/buttomtext"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:text="@string/getIO"
                               android:visibility="gone" />

                       </LinearLayout>
                   </LinearLayout>

               </LinearLayout>

           </LinearLayout>

       </ScrollView>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="16dp"
           style="@style/buttomtext"
           android:textColor="@color/white"
           android:text="Ver. 1.7.0"
           >

       </TextView>

       <ImageView android:layout_width="match_parent"
                  android:layout_height="200dp"
                  android:layout_gravity="bottom"
                  android:foregroundGravity="bottom"
                  android:scaleType="fitCenter"
                  android:src="@drawable/main_back"
       />

   </LinearLayout>

</LinearLayout>