<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/rowback">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:gravity="right"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/devId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            style="@style/textDevRow"
            android:layout_gravity="right"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            style="@style/textDevRow"
            android:padding="4dp"
            android:layout_gravity="right"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:gravity="right"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/devName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            style="@style/textDevRow"
            android:layout_gravity="right"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            style="@style/textDevRow"
            android:padding="4dp"
            android:layout_gravity="right"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="right"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/devStatus"
            style="@style/textDevRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="4dp" />

        <TextView
            style="@style/textDevRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="4dp"
            android:text="@string/status" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:gravity="right"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/devLastUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            style="@style/textDevRow"
            android:layout_gravity="right"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastUpdate"
            style="@style/textDevRow"
            android:padding="4dp"
            android:layout_gravity="right"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:gravity="right"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/devPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            style="@style/textDevRow"
            android:layout_gravity="right"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            style="@style/textDevRow"
            android:padding="4dp"
            android:layout_gravity="right"/>


    </LinearLayout>

</LinearLayout>