<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_gravity="center"
    android:gravity="center"

    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_margin="16dp"
        android:padding="16dp"
        android:background="@drawable/dialog_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:textColor="#000000"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:text="@string/app_name"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:padding="16dp"
            android:id="@+id/spinnerID"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id = "@+id/dataView"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvHint"
                android:layout_marginBottom="16dp"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:text=""
                android:visibility="gone"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etInputText"
                android:layout_marginTop="48dp"
                android:visibility="visible"
                android:backgroundTint="#000000"
                android:textColor="#000000"
                android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM1234567890"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:id="@+id/viSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:visibility="gone"
                android:paddingBottom="16dp"
                android:layout_gravity="right|center"
                android:gravity="right|center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvSwich"
                    style="@style/buttomtext"
                    android:text="@string/on"
                    android:textColor="#000000"
                    android:layout_marginRight="8dp"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/swSwitch"
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textColor="#000000"
                    android:textOff="@string/off"
                    android:textOn="@string/on"
                    android:textSize="12dp"
                    tools:checked="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btCancel"
                    style="@style/buttomtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"

                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:text="@string/cancel" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btSave"
                    style="@style/buttomtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"

                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:text="@string/send" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>



    </LinearLayout>

</LinearLayout>